<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">OReader</string>
    <string name="pull_to_refresh">Swipe down</string>
    <string name="loosen_to_refresh">Release to load more data immediately</string>
    <string name="loading_refresh">Refreshing!</string>
    <string name="refresh_complete">Swip me up!</string>
    <string name="permission_to_illustrate"> %s  Giải thích quyền hạn</string>
    <string name="phone_permission">Quyền hạn điện thoại</string>
    <string name="imei_permission">Kiểm tra mã IMEI của thiết bị để đảm bảo an toàn cho tài khoản và ngăn chặn hành vi trộm cắp tài khoản.</string>
    <string name="storage_space_permissions">Quyền lưu trữ</string>
    <string name="down_text">Tải xuống các tập tin sách để giảm tiêu thụ dung lượng</string>
    <string name="find_version">New Version Available V%s</string>
    <string name="why_need">Tại sao bạn cần nó %s？</string>
    <string name="login_bottom_hint">If you tapping continue, you agree to the</string>
    <string name="EMAIL_URL">liying.liang01@boetech.cn</string>
    <string name="aiye_exit_tip">Press again to exit %s</string>
    <string name="aiye_select_all">Select All</string>
    <string name="aiye_cancel_select_all">Deselect All</string>
    <string name="aiye_clear">Xóa sạch</string>
    <string name="aiye_delete">Xóa</string>
    <string name="aiye_setting">Settings</string>
    <string name="aiye_complete">Cancel</string>
    <string name="aiye_cancel">Hủy bỏ</string>
    <string name="aiye_add_to_shelf">Add to the Library?</string>
    <string name="aiye_check_now">Xem ngay</string>
    <string name="aiye_receive_now">Nhận ngay</string>
    <string name="aiye_reject">Không</string>
    <string name="aiye_screening">Lựa chọn</string>
    <string name="aiye_reset">Cài đặt lại</string>
    <string name="aiye_submit">Gửi</string>
    <string name="aiye_classify">Thể loại</string>
    <string name="aiye_login">Nama Pengguna</string>
    <string name="aiye_facebook">Continue with Facebook</string>
    <string name="aiye_google">Continue with Google</string>
    <string name="aiye_search">Tìm</string>
    <string name="aiye_send_out">thưởng</string>
    <string name="aiye_jump">Skip</string>
    <string name="aiye_read_continue_ask">Chương《%s》, bạn có muốn đi đọc không?</string>
    <string name="aiye_read_continue">CONTINUE READING</string>
    <string name="home_activity_book_shelf">Library</string>
    <string name="home_activity_recommend">Discover</string>
    <string name="home_activity_rank">Genres</string>
    <string name="home_activity_profile">Writing</string>
    <string name="home_activity_mine">Inbox</string>
    <string name="mine_activity_book_Library">LIBRARY</string>
    <string name="mine_activity_book_recording">RECORDING</string>
    <string name="mine_activity_write_on_navelstar">WRITE on NovelStar</string>
    <string name="shelf_manage_pop_list_show">Hiển thị danh sách</string>
    <string name="shelf_manage_pop_grid_show">Hiển thị đường lưới</string>
    <string name="shelf_manage_pop_read_history">Reading History</string>
    <string name="shelf_edit_pop_deletes">Delete</string>
    <string name="shelf_edit_pop_delete">Delete(%d)</string>
    <string name="shelf_edit_selected">SELECTED(%d)</string>
    <string name="week_recommend_pop_title">Dành cho bạn</string>
    <string name="week_recommend_pop_sub_title">Hãy thử đọc truyện mới đi~</string>
    <string name="week_recommend_pop_receive">Thêm vào giá sách</string>
    <string name="ranking_activity_title">Bảng xếp hạng</string>
    <string name="ranking_activity_week">Danh sách hàng tuần</string>
    <string name="ranking_activity_day">Danh sách hàng ngày</string>
    <string name="ranking_activity_month">Danh sách hàng tháng</string>
    <string name="ranking_activity_total">Danh sách tổng thể</string>
    <string name="mine_user_id">UID：%d&#8194;</string>
    <string name="mine_sign_welfare">Điểm danh &amp; lợi ích</string>
    <string name="mine_sign_continuous">Điểm danh %d&#8194;ngày liên tiếp</string>
    <string name="mine_do_task">Làm nhiệm vụ</string>
    <string name="mine_future_sign_days">Bạn có thể nhận được một gói quà tặng lớn nếu bạn kiên trì  %d&#8194;ngày nữa～</string>
    <string name="mine_user_money">%d&#8194;xu丨%d&#8194;xu tặng</string>
    <string name="mine_recharge">Nạp tiền</string>
    <string name="mine_user_month_date">Hết hạn：%s</string>
    <string name="mine_user_month_open">Mở</string>
    <string name="mine_user_month_continue">Gia hạn</string>
    <string name="mine_share_to_make_money">分享赚钱</string>
    <string name="mine_my_grade">Cấp độ của tôi:</string>
    <string name="mine_sign_rule">Quy tắc thưởng đăng nhập điểm danh ></string>
    <string name="mine_sign">Điểm danh </string>
    <string name="mine_signed">Đã điểm danh </string>
    <string name="mine_want_do_task">Tôi muốn làm nhiệm vụ</string>
    <string name="task_completed">Completed</string>
    <string name="task_wait_complete">Sẽ hoàn thành</string>
    <string name="task_award_description">+%d&#8194;Xu Tặng </string>
    <string name="task_tip">TIP nhiệm vụ</string>
    <string name="task_award">Phần thưởng nhiệm vụ</string>
    <string name="task_award_voucher">%d%s &#8194;</string>
    <string name="task_receive_award">Nhận phần thưởng</string>
    <string name="mine_sign_success">Đăng nhập thành công</string>
    <string name="detail_reward">Tip</string>
    <string name="detail_start_read">START READING</string>
    <string name="fans_value">Giá trị Fans: %d&#8194;</string>
    <string name="reward_value">Rewarded %d&#8194;coins</string>
    <string name="comment_total_comment">All comments</string>
    <string name="comment_bracket_value">（%d&#8194;</string>
    <string name="comment_null">Nội dung bình luận trống rỗng！</string>
    <string name="reply_poster">Write comment…</string>
    <string name="other">Khác</string>
    <string name="account_recharge_description">%.2f Nạp tiền VNĐ（%s）</string>
    <string name="account_recharge_value_both">+%d&#8194;xu丨+%d&#8194;Xu Tặng</string>
    <string name="account_recharge_value_money">+%d&#8194;xu</string>
    <string name="account_recharge_value_voucher">+%d&#8194;Xu Tặng</string>
    <string name="voucher_enable_date">Có hiệu lực cho đến khi:%s</string>
    <string name="book_money">&#8194;xu</string>
    <string name="permission_open">Đi để mở</string>
    <string name="permission_known">Tôi hiểu rồi</string>
    <string name="have_a_book_shortage">Không biết đọc truyện nào? Chán quá? Đi đến với tôi tải xuống </string>
    <string name="watch_it_with_me">Bạn yêu, tôi đã tìm thấy một truyện thú vị, hãy đến xem với ~</string>
    <string name="date_task">Nhiệm vụ hàng ngày</string>
    <string name="new_task">Nhiệm vụ người mới</string>
    <string name="the_cumulative_task">Nhiệm vụ tích lũy</string>
    <string name="my_news">Tin tức của tôi</string>
    <string name="reply_me">Trả lời tôi</string>
    <string name="received_praise">Like đã nhận</string>
    <string name="system_message">Tin tức hệ thống </string>
    <string name="my_comments">Bình luận của tôi</string>
    <string name="book_purchase">Manage Automatic Purchased</string>
    <string name="card">Thẻ cào</string>
    <string name="nganluong">Ngân Lượng</string>
    <string name="push_settings">Open notification</string>
    <string name="author_joined">作者加入</string>
    <string name="author_books">Author Books</string>
    <string name="my_accounts">Tài khoản của tôi</string>
    <string name="prepaid_records">Lịch sử nạp tiền</string>
    <string name="consumption_records">Lịch sử tiêu thụ</string>
    <string name="my_book_bean">Xu Tặng của tôi</string>
    <string name="book_bean_show">Giải thích Xu Tặng </string>
    <string name="expired_book_bean">Xem Xu Tặng hết hạn</string>
    <string name="change_the_book_bean">兑换书豆</string>
    <string name="bean">&#8194;xu tặng</string>
    <string name="my_monthly">我的包月</string>
    <string name="open_monthly">开通包月</string>
    <string name="sign_in_rules">Quy tắc thưởng đăng nhập và điểm danh</string>
    <string name="free">Miễn phí</string>
    <string name="comment_on_details">Comment details</string>
    <string name="experience_immediately">Hãy thử ngay bây giờ</string>
    <string name="my_bookshelf">Library</string>
    <string name="boy">Con trai</string>
    <string name="girl">Nữ sinh</string>
    <string name="ranking">Xếp hạng</string>
    <string name="fan_list">粉丝榜</string>
    <string name="fans_rules">Quy tắc Fans</string>
    <string name="login_in">Tới trang chủ</string>
    <string name="bind_phone_number">绑定手机号</string>
    <string name="reading_preferences">Cài đặt Sở thích đọc sách</string>
    <string name="to_report">Báo cáo</string>
    <string name="mt_placed_top">Ghim bình luận</string>
    <string name="cancel_mt_placed_top">Bỏ ghim bình luận</string>
    <string name="cancel_mt_placed_top_success">Ghim bình luận thành công</string>
    <string name="mt_placed_top_success">Đã bỏ ghim bình luận</string>
    <string name="mt_banned">Chặn bình luận</string>
    <string name="cancel_mt_banned">Bỏ chặn bình luận</string>
    <string name="mt_banned_success">Ghim bình luận thành công</string>
    <string name="cancel_mt_banned_success">Đã bỏ ghim bình luận</string>
    <string name="published">Gửi</string>
    <string name="directory">Table of Contents</string>
    <string name="more">MORE</string>
    <string name="activity_rules">Quy tắc hoạt động</string>
    <string name="common_more">More</string>
    <string name="help">Trợ giúp</string>
    <string name="signed_in_label">Đang điểm danh</string>
    <string name="entries_yet">No data~</string>
    <string name="reverse_order">Reverse order</string>
    <string name="positive_sequence">In order</string>
    <string name="cache_success">Cache success</string>
    <string name="purchase_failed">Failed to purchase!</string>
    <string name="buging_to">Purchasing…</string>
    <string name="monthly_success"> Mua hàng tháng thành công</string>
    <string name="buy_fail">Thanh toán thất bại</string>
    <string name="set_success">Cài đặt thành công</string>
    <string name="maximum_word">Enter a maximum of 2000 words o(╯□╰)o </string>
    <string name="mailbox_copied">邮箱已复制，发送邮件加入我们~</string>
    <string name="looking_forward_join">／我们期待你的加入／</string>
    <string name="choose_apply">Chọn ứng dụng</string>
    <string name="seting">Setting···</string>
    <string name="loading_off">Logging out</string>
    <string name="cleaning">Cleaning up···</string>
    <string name="clean_success">Cleared！</string>
    <string name="request_failed">Điểm danh không thành công</string>
    <string name="series_completed">Các nhiệm vụ này đã được hoàn thành~</string>
    <string name="collecting">Đang nhận ···</string>
    <string name="enter_exchange_code">Vui lòng nhập mã đổi</string>
    <string name="secret">Bảo mật</string>
    <string name="to_prepaid_phone">Nạp tiền</string>
    <string name="authors_contact_official">Chỉ dùng cho tác giả gửi truyện chính thức</string>
    <string name="custom_tip">Phần thưởng tùy bạn</string>
    <string name="input_money">Vui lòng nhập số tiền thưởng</string>
    <string name="fifty_book_beans">50&#8194;xu tặng</string>
    <string name="wedding_package">Chúc mừng bạn có một gói tặng người mới có thể nhận!</string>
    <string name="top_up_award">Phần thưởng nạp tiền</string>
    <string name="exchange">Đổi</string>
    <string name="warm_tips">Chú ý:</string>
    <string name="exchange_hint1">1. Mã đổi là mã đổi nhận được khi tham gia các hoạt động truyền bá</string>
    <string name="exchange_hint2">2. Sau khi đổi mã, bạn có thể nhận được Xu Tặng tương ứng, bạn có thể xem nó trong trung tâm cá nhân [Tài khoản của tôi] - [Xu Tặng của tôi]</string>
    <string name="boy_n">Male</string>
    <string name="girl_n">Female</string>
</resources>