<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_4_color"
    android:orientation="vertical">

    <EditText
        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_white_corner_5dp_gray_border"
        android:gravity="center_vertical"
        android:hint="@string/enter_exchange_code"
        android:maxLines="1"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/gray_1_color"
        android:textSize="14sp" />

    <life.forever.cf.publics.weight.viewtext.MagnetTextView
        android:id="@+id/exchange"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_red_corner_5dp"
        android:gravity="center"
        android:text="@string/exchange"
        android:textColor="#FFFFFFFF"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/warm_tips"
        android:textColor="@color/dark_2_color"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="8dp"
        android:lineSpacingExtra="5dp"
        android:text="@string/exchange_hint1"
        android:textColor="@color/gray_1_color"
        android:textSize="13sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:lineSpacingExtra="5dp"
        android:text="@string/exchange_hint2"
        android:textColor="@color/gray_1_color"
        android:textSize="13sp" />

</LinearLayout>