<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="8"
        android:background="@drawable/shape_white_corner_15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/dark_2_color"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/phone_permission"
            android:textColor="@color/dark_2_color"
            android:textSize="16sp" />

        <life.forever.cf.publics.weight.viewtext.FixedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:lineSpacingExtra="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:text="@string/imei_permission"
            android:textColor="@color/dark_3_color"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/storage_space_permissions"
            android:textColor="@color/dark_2_color"
            android:textSize="16sp" />

        <life.forever.cf.publics.weight.viewtext.FixedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:lineSpacingExtra="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:text="@string/down_text"
            android:textColor="@color/dark_3_color"
            android:textSize="14sp" />

        <View style="@style/common_horizontal_line" />

        <life.forever.cf.publics.weight.viewtext.MagnetTextView
            android:id="@+id/open"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:gravity="center"
            android:text="@string/permission_known"
            android:textColor="@color/theme_color"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>