<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="@drawable/selector_list_selector"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/taskName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_up_award"
                android:textColor="@color/dark_2_color"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/taskAward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/task_award_description"
                android:textColor="@color/gray_1_color"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/taskStatus"
            android:layout_width="72dp"
            android:layout_height="28dp"
            android:background="@drawable/selector_enable_border_red_transparent"
            android:gravity="center"
            android:text="@string/task_receive_award"
            android:textColor="@color/theme_color"
            android:textSize="12sp" />

    </LinearLayout>

    <View
        style="@style/common_horizontal_line"
        android:layout_gravity="bottom" />

</FrameLayout>